2006-12-04 - johan
Changed to the latest stable release of FreeType (2.2.1).

2006-11-29 - standa
Hopefully NVDI compatible spdchar.map handling now in place. Default
NVDI mapping added. Can use our 'Czech KEYBCS' spdchar.map table
with no problem. IMHO 98% of character mappings should be correct.
Adding the #include <freetype/internal/internal.h> to the
ft2_ftsystem.c to get FreeType2 2.2.1 build working.

2006-11-27 - johan
Cache flush enabled after driver load.
Turned on supervisor memory access flag in engine binary.
fVDI engine version bumped to 0.968beta.

2006-11-25/26 - standa
Using the newly created lib_vrt_cpyfm_nocheck to mono/8bit expand text
(fixes vst_fg_color() using Papyrus X demo text color rendering).

2006-11-15 - standa
Underline effect doesn't need to keep a font glyph cached (done in the
text rendering function directly.
Fontextra.ref_count introduced to fix fundamental Fontheader memory 
management bug that must have been causing crashes and rendering
errors because of use of unallocated memory.

2006-11-13 - standa
Some vertical font alignment tuning. Still not completely right IMHO.

2006-11-12 - standa
Implementing algorithmic FreeType font vst_effects() algorithms.
Left the 'outline' for later.

2006-07-14 - standa
FreeType antialiased rendering uses the glyph->minx too now. No weird
kerning anymore.
Glyph debugging added for debug > 3.

2006-06-05 - johan
Reversed bit order for 32 bit vr_trnfm.
Fix for debug output of return values.
Correction of colour selection for mono-expand blit in ARAnyM driver.

2006-06-02 - johan
Correction for vq_devinfo debug output.

2006-05-26 - johan
vqt_ctab now uses correct palette address and returns real colour values.
Made vrt_cpyfm disregard clip rectangle for non-screen destinations.

2006-05-19 - johan
Fixed bug in creation of extra handle table.

2006-04-26 - johan
Bug fix for bitplane driver mouse cursor removal.

2006-04-25 - johan